--- a/scss/_ventaAutos.scss
+++ b/scss/_ventaAutos.scss
@@ -220,8 +220,8 @@
         font-size: 14px; /* Tamaño de texto más grande para contenido */
         padding: 12px; /* Un poco más de padding */
         line-height: 1.5; /* Espaciado adecuado entre líneas */
-        width: 400px;
-        height: 500px;
+        width: 100%;
+        height: 520px;
         h4{
             font-size: 16px;
         }
