--- a/scss/main.scss
+++ b/scss/main.scss
@@ -53,10 +53,8 @@ main{
 @keyframes rotar-aparecer{
     0%{
         rotate: 0deg;
-        scale: 0.1;
     }
     100%{
-        scale: 1;
         rotate: 360deg;
     }
 }
@@ -183,6 +181,7 @@ main{
     justify-content: center;
 }
 #que-somos__h2{
+    animation: fadeIn, aparecer 1.5s;
     z-index: 2;
     font-size: 70px;
     font-family: monospace;
@@ -191,6 +190,7 @@ main{
     padding-top: 15%;
 }
 #que-somos__p{
+    animation: fadeIn 2s;
     z-index: 2;
     color: map-get($paleta-colores, 1);
     text-align: center;
@@ -213,6 +213,7 @@ main{
 }
 
 #productos-carousel{
+
     padding: 5% 2%;
     background: repeating-linear-gradient(
         -45deg,
@@ -222,6 +223,7 @@ main{
         map-get($paleta-colores, 7) 40%
     );
     img{
+        animation: fadeIn 1s;
         filter: brightness(80%);
         transition: filter 0.5s;
         &:hover{
@@ -260,6 +262,7 @@ main{
 }
 
 #comp-related__h2{
+    animation: fadeIn 3s;
     text-align: center;
     font-family: fantasy;
     letter-spacing: 2px;
